# pjournal-esp32

./: .gitignore  BUILD_INFO.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  bt_keyboard.cpp  bt_keyboard.h  builtin_prompts.h  deepseek_client.cpp  deepseek_client.h  file_manager_server.cpp  file_manager_server.h  flomo_client.cpp  flomo_client.h  font_renderer.cpp  font_renderer.h  journal_storage.cpp  journal_storage.h  json_utils.cpp  json_utils.h  main.cpp  pcf85063.cpp  pcf85063.h  pjournal_app.cpp  pjournal_app.h  screen_bt_manage.cpp  screen_bt_manage.h  screen_editor.cpp  screen_editor.h  screen_file_manager.cpp  screen_file_manager.h  screen_settings.cpp  screen_settings.h  settings_manager.cpp  settings_manager.h  terminus20.fnt  terminus22.fnt  terminus24.fnt  terminus28.fnt  ui_helpers.cpp  ui_helpers.h  user_config.h  webdav_client.cpp  webdav_client.h  (+2 more)
main/ime/: IME.cpp  IME.h
scripts/: bdf_to_fnt.py  merge_punct.py  txt_to_liangfen.py
